--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spipu/html2pdf",
+    "name": "lflescano/html2pdf",
     "type": "library",
     "description": "HTML2PDF is a HTML to PDF converter written in PHP5 (it uses TCPDF). OFFICIAL PACKAGE",
     "keywords": ["html", "pdf", "html2pdf"],
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Spipu",
-            "homepage": "https://github.com/spipu",
+            "homepage": "https://github.com/lflescano",
             "role": "Developer"
         }
     ],
